Bug 1074401 - Ensure that the repaint request is always dispatched from the APZ on the main thread. r=botond